--- a/views/library.ejs
+++ b/views/library.ejs
@@ -3,6 +3,7 @@
   <body>
     <div class="top">
       <%- include('includes/search2.ejs')%>
+      <%- include('includes/logo.ejs')%>
     <%- include('includes/navigation2.ejs')%>
 
       <div class="main">
