--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: 200px 1fr;
-    grid-template-rows: 70px 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas: "logo search"
                         "nav main"; 
 }
@@ -23,20 +23,34 @@ body {
 .main{
     grid-area: main;
     padding: 20px;
-}
-.container{
-max-width: 75vw;
+   
 }
 
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-area: logo;
+    background-color: black;
+}
+/* .container{
+max-width: 75vw;
+} */
+
 .search-container{
-   
     grid-area: search;
     padding: 20px;
+}
+
+.search-input {
+    height: 100%;
+    padding: 10px;
 }
 
 .search-form {
     display: grid;
     grid-template-columns: 1fr 100px;
+    gap: 10px;
 }
 
 /* header and navigation */
@@ -149,6 +163,17 @@ button .fas, button .far{
     font-size: 40px;
     color: black;
 }
+
+.favorite:hover{
+color:#4a018a; 
+}
+
+.delete:hover{
+    color:#4a018a; 
+}
+
+
+
 .btn-text{
     font-family: Arial, Helvetica, sans-serif;
     margin: 5px;
@@ -165,9 +190,10 @@ button .fas, button .far{
 
 }
 .tag{
-    height: 15px;
+    height: 20px;
+    width: 100px;
     border-radius: 5px;
-    background-color: #adadad; 
+    border: solid 2px #8f8f8f;
     margin: 5px; 
 }
 
@@ -177,6 +203,17 @@ input,label{
 input{
     height: 30px;
     width: 75vw;
+    border-radius: 5px;
+    border-color: black;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+input [type="search"]{
+    height: 30px;
+    width: 50vw;
     border-radius: 5px;
     border-color: black;
     align-items: center;
@@ -209,26 +246,28 @@ select{
 
 /* gradient canvas */
 .canvas {
-    padding: 0;
-    margin-right: 15px;
+    padding: 10px;
     border-radius: 9px;
-    height: 80vh;
-    width: 66.7vw;
+    height: 500px;
+    width: 500px;
+}
+
+.wrap-canvas{
+    display: flex;
+    justify-content: center;
 }
 .gradient-container{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    align-items: center;
-    justify-content: flex-end;
-
+    display: block;
+    /* align-items: center;
+    justify-content: flex-end; */
 }
 
 .info-container{
-    display: flex;
+    padding: 10px;
+    display: block;
     justify-content: center;
     align-items: center;
-    width: 34vw; 
+    
 }
 
 .info-subcontainer{
@@ -238,6 +277,14 @@ select{
     margin: 10px; 
 }
 .btns-container{
+    display: flex;
+}
+
+.info-text{
+    display: block;
+}
+
+.tags-container{
     display: flex;
 }
 
@@ -254,7 +301,20 @@ select{
 
 }
 
+.small-container{
+ padding: 10px;  
+  width: 300px; 
+}
 
+.flex-container {
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.small-canvas{
+    border-radius: 9px;
+}
 
 
 
