--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -1,103 +1,129 @@
-
-<div class ="gradient-container">
-  <div class ="info-container">
-  <div class = "info-subcontainer">
-    <h1><%=title%></h1> 
-    <%for(let i=0; i<tags.length; i++ ){%> 
-       <div class="tag">#<%=tags[i]%></div>
-      <% } %> 
-    <div class="btns-container">
-    <form class = "from" action = "/users/favorites" method="post">
-      <input type="hidden" name="userId" value='<%=userId%>'> 
-      <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
-      <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
-      <input type="hidden" name="type" value ='<%=type%>'> 
-      <input type = "hidden" name = "title" value = '<%=title%>'>
-      <input type = "hidden" name = "color1" value = '<%=color1%>'>
-      <input type = "hidden" name = "color2" value = '<%=color2%>'>
-      <input type = "hidden" name = "tags" value = '<%=tags%>'>
-      <button class = "btn" type= "submit"><i class="far fa-star"></i></button>
-    </form>
-    
-    <form class = "form" action = "/gradient/delete" method="post">
-      <input type="hidden" name="userId" value='<%=userId%>'> 
-      <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
-      <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
-      <input type="hidden" name="type" value ='<%=type%>'> 
-      <input type = "hidden" name = "title" value = '<%=title%>'>
-      <input type = "hidden" name = "color1" value = '<%=color1%>'>
-      <input type = "hidden" name = "color2" value = '<%=color2%>'>
-      <input type = "hidden" name = "tags" value = '<%=tags%>'>
-      <button class = "btn" type= "submit"><i class="fas fa-trash-alt"></i></button>
-    </form>
-
-
-    <% if(!library) { %>
-      <form class = "form" action ="/gradient/library" method = "post" >
-        <input type = "hidden" name = "title" value = '<%=title%>'>
-        <input type = "hidden" name = "color1" value = '<%=color1%>'>
-        <input type = "hidden" name = "color2" value = '<%=color2%>'>
-        <input type="hidden" name="type" value ='<%=type%>'> 
-        <input type = "hidden" name = "tags" value = '<%=tags%>'>
-        <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
-        <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
-        <button class = "btn-text" type= "submit">Publish to library</button>
-      </form>
-      <% } %> 
-  </div>
-  </div>
+<div class="wrap-canvas">
+<div class="gradient-container">
+  <div class="info-container">
+    <!-- <div class="info-subcontainer"> -->
+      <div class="info-text">
+      <h1>
+        <%=title%>
+      </h1>
+      <div class="tags-container">
+      <%for(let i=0; i<tags.length; i++ ){%>
+        <div class="tag">#<%=tags[i]%>
+        </div>
+        <% } %>
+      </div>
+        <script>
+          function favorite(){
+        const heartIcon  = document.getElementById('heart')
+        heartIcon.className = 'fas fa-heart'
+          }
+      </script>
 </div>
+
+          <div class="btns-container">
+            <form class="from" action="/gradient/favorites" method="post">
+              <input type="hidden" name="userId" value='<%=userId%>'>
+              <input type="hidden" name="gradientId" value='<%=gradientId%>'>
+              <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+              <button class="btn" type="submit">
+                <% if(favorites.includes(gradientId)){%>
+                  <i id ="heart" class="fas fa-heart favorite"></i></button>
+                <% } else{%> 
+                 <i id ="heart" class="far fa-heart favorite"></i></button>
+                 <% } %> 
+            </form>
+
+            <form class="form" action="/gradient/delete" method="post">
+              <input type="hidden" name="userId" value='<%=userId%>'>
+              <input type="hidden" name="gradientId" value='<%=gradientId%>'>
+              <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+              <input type="hidden" name="type" value='<%=type%>'>
+              <input type="hidden" name="title" value='<%=title%>'>
+              <input type="hidden" name="color1" value='<%=color1%>'>
+              <input type="hidden" name="color2" value='<%=color2%>'>
+              <input type="hidden" name="tags" value='<%=tags%>'>
+              <button class="btn" type="submit"><i class="fas fa-trash-alt delete"></i></button>
+            </form>
+
+
+            <% if(!library) { %>
+              <form class="form" action="/gradient/library" method="post">
+                <input type="hidden" name="title" value='<%=title%>'>
+                <input type="hidden" name="color1" value='<%=color1%>'>
+                <input type="hidden" name="color2" value='<%=color2%>'>
+                <input type="hidden" name="type" value='<%=type%>'>
+                <input type="hidden" name="tags" value='<%=tags%>'>
+                <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+                <input type="hidden" name="gradientId" value='<%=gradientId%>'>
+                <button class="btn-text" type="submit">Publish to library</button>
+              </form>
+              <% } %>
+          </div>
+    <!-- </div> -->
+  </div>
+
+  <canvas class="canvas" id="gradient-canvas" height="500" width="500"></canvas>
   
-<canvas class ="canvas" id="gradient-canvas" height="500" width="500"></canvas>
+</div>
 </div>
 
-    <script>
+<script>
 
-      const canvas = document.getElementById("gradient-canvas");
-      const context = canvas.getContext("2d");
+  const canvas = document.getElementById("gradient-canvas");
+  const context = canvas.getContext("2d");
 
-   let gradient; 
-     switch('<%=type%>'){
-      case 'horizontal':
-       gradient = context.createLinearGradient(0,0, 500,0);
-      gradient.addColorStop(0, '<%=color1%>');
-      gradient.addColorStop(1, '<%=color2%>');
-      context.fillStyle = gradient;
-      context.fillRect(0, 0, 500, 500);
+
+  function createGradient(gradient, context, color1, color2) {
+    gradient.addColorStop(0, '<%=color1%>');
+    gradient.addColorStop(1, '<%=color2%>');
+    context.fillStyle = gradient;
+    context.fillRect(0, 0, 500, 500);
+
+  }
+
+  let gradient;
+  switch ('<%=type%>') {
+    case 'horizontal':
+      gradient = context.createLinearGradient(0, 0, 500, 0);
+      // gradient.addColorStop(0, '<%=color1%>');
+      // gradient.addColorStop(1, '<%=color2%>');
+      // context.fillStyle = gradient;
+      // context.fillRect(0, 0, 500, 500);
+      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+
       break;
 
 
-      case 'vertical': 
-       gradient = context.createLinearGradient(0,0, 0,500)
-      gradient.addColorStop(0, '<%=color1%>');
-      gradient.addColorStop(1, '<%=color2%>');
-      context.fillStyle = gradient;
-      context.fillRect(0, 0, 500, 500);
+    case 'vertical':
+      gradient = context.createLinearGradient(0, 0, 0, 500)
+      // gradient.addColorStop(0, '<%=color1%>');
+      // gradient.addColorStop(1, '<%=color2%>');
+      // context.fillStyle = gradient;
+      // context.fillRect(0, 0, 500, 500);
+      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
       break;
 
-      case 'radial':
-      gradient = context.createRadialGradient(300,300,30,300,300,300)
-      gradient.addColorStop(0, '<%=color1%>');
-      gradient.addColorStop(1, '<%=color2%>');
-      context.fillStyle = gradient;
-      context.fillRect(0, 0, 500, 500);
-        break;
+    case 'radial':
+      gradient = context.createRadialGradient(300, 300, 30, 300, 300, 300)
+      // gradient.addColorStop(0, '<%=color1%>');
+      // gradient.addColorStop(1, '<%=color2%>');
+      // context.fillStyle = gradient;
+      // context.fillRect(0, 0, 500, 500);
+      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+      break;
 
-        case 'diagonal':
-        gradient = context.createLinearGradient(0,0,500,500)
-        gradient.addColorStop(0, '<%=color1%>');
-        gradient.addColorStop(1, '<%=color2%>');
-        context.fillStyle = gradient;
-        context.fillRect(0, 0, 500, 500);
-        break;
-        
-     }
-     
+    case 'diagonal':
+      gradient = context.createLinearGradient(0, 0, 500, 500)
+      // gradient.addColorStop(0, '<%=color1%>');
+      // gradient.addColorStop(1, '<%=color2%>');
+      // context.fillStyle = gradient;
+      // context.fillRect(0, 0, 500, 500);
+      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+      break;
 
-     
-  
-    </script>
- 
+  }
 
 
-  
+
+
+</script>
