--- a/views/includes/search2.ejs
+++ b/views/includes/search2.ejs
@@ -1,8 +1,8 @@
 <div class="search-container">
 
   <form class="search-form" action="/gradient/search" method="post">
-    <input id="query" class='searchBar' type="search" name="query" placeholder="search for gradients...">
-    <button class="btn" type="submit">Search</button>
+    <input id="query"  class="search-input" type="search" name="query" placeholder="search for gradients...">
+    <button class="btn-text" type="submit">Search</button>
     <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
   </form>
 
