--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,6 +5,7 @@
     <div class="top">
 
       <%- include('includes/search2.ejs')%>
+      <%- include('includes/logo.ejs')%>
         <%- include('includes/navigation2.ejs')%>
         <div class="main">
 
