--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,15 +166,25 @@ button .fas, button .far{
     color: black;
 }
 
-/* .download-form{
+
+.btn-download{
+    background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
     height: 45px;
     width: 45px;
     font-size: 40px;
     color: black;
+
 }
-.download-form{
+.btn-download:hover{
     color:#4a018a; 
-} */
+}
+
 
 .download-form{
     display: flex;
