--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -58,29 +58,34 @@
               </form>
               <% } %>
           </div>
-    <!-- </div> -->
   </div>
 
   <div class="download-container">
 
-  <form class="download-form" action="/gradient/griffin" method="post">
-           
-    <label class="dwnl-label" for="width"> Width </label>
-    <input  width = "100px" class="text-small" id="width" class="form-input-text" type="text" name="width" 
+  <form class="download-form" action="/gradient/download" method="post">
+     
+    <div class = "form-group">
+      <label class="dwnl-label" for="width"> Width </label>
+       <input  width = "100px" class="text-small" id="width" class="form-input-text" type="text" name="width" 
         placeholder="enter width" value="500">
+        </div>
+      
+      <div class = "form-group">
+           <label class="dwnl-label" for= "aspectRatio">Aspect ratio</label>
+           <select width = "100px" class="text-small" id="aspectRatio" name="aspectRatio">
+           <option value="0.75">4X3</option>
+           <option value="0.5625">16X9</option>
+           <option value="1">1X1</option>
+       </select>
+    </div>
   
-    <label class="dwnl-label" for= "aspectRatio">Aspect ratio</label>
-    <select width = "100px" class="text-small" id="aspectRatio" name="aspectRatio">
-        <option value="0.75">4X3</option>
-        <option value="0.5625">16X9</option>
-        <option value="1">1X1</option>
-    </select>
-  
-  <input type="hidden" name="gradientId" value='<%=gradientId%>'>
-  <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
-  <button class="btn" type="submit"><i class="fad fa-download"></i></button>
-  </form>
+    <div class = "form-group">
+     <input type="hidden" name="gradientId" value='<%=gradientId%>'>
+     <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+     <button class="btn-download" type="submit"><i class="fad fa-download"></i></button>
+  </div>
 
+    </form>
 </div>
 
   <canvas class="canvas" id="gradient-canvas" height="500" width="500"></canvas>
