--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,10 @@
         <%- include('includes/logo.ejs')%>
         <%- include('includes/navigation2.ejs')%>
     
-        <div class="main">
-          <h1>Home page</h1>
+        <div id = "main" class="main">
+          <div class="home">
+          <div class="home-title">Create your own graients now!</div>
+        </div>
         </div>
         
       </div>
