--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -15,7 +15,7 @@
                     <input type="password" id="password" class="form-control" name="password" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn">Update Password</button>
+                    <button type="submit" class="link-btn">Update Password</button>
                 </div>
                 <input type ="hidden" name ="userId" value= '<%=userId%>'>
                 <input type ="hidden" name ="passwordToken" value= '<%=passwordToken%>'>
