--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,5 +7,6 @@
     <title><%=pageTitle%></title> 
     <link rel = "stylesheet" href = "/css/main.css">
     <link rel = "stylsheet" href = "/css/forms.css">
+    <link rel = "icon" href = "/favicon.ico">
     <script src="https://kit.fontawesome.com/9eb54e81b4.js" crossorigin="anonymous"></script>
 </head>
