--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,12 +23,17 @@
                     <label>Password</label>
                     <input type="password" id="password" class="form-control" name="password" required>
                 </div>
+            
                 <div class="form-group">
+                    <div class="lg-btns-container">
                     <button type="submit" class="btn-text">Login</button>
+                    <button class="link-btn"><a class= "link" href="/users/reset">Reset Password</a></button>
                 </div>
+               </div>
+                
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
-            <a href="/users/reset">Reset Password</a>
+            
         </div> 
            </div>
 
