--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,10 +26,12 @@
               </div>
 
               <% if (userId==user._id) { %>
-                <div clas="form-group">
-                  <a href='/users/profile/edit/<%=user._id%>'>Edit profile</a>
-                </div>
+                <div class="form-group">
+               <button class="link-btn">
+                  <a class="link" href='/users/profile/edit/<%=user._id%>'>Edit profile</a>
+               </button>
                 <%}%>
+                </div>
 
 
             </div>
