--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -19,7 +19,7 @@
                     <input type="email" id="email" class="form-control" name="email" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn">Reset Password</button>
+                    <button class="link-btn" type="submit" >Reset Password</button>
                 </div>
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
