--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -33,7 +33,9 @@
             <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
 
             <div class = "form-group">
+                <div class="lg-btns-container">
             <button type="submit" class="btn-text">Sign-up</button>
+            </div>
             </div>
         </form>
     </div> 
