--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -7,7 +7,7 @@
     <%- include('includes/navigation2.ejs')%>
 
       <div class="main">
-        <h1>Explore</h1>
+        <h1>Your posts:</h1>
         <%-include('includes/library.ejs')%>
       </div>
 
