--- a/views/admin-user-view.ejs
+++ b/views/admin-user-view.ejs
@@ -24,7 +24,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <button type="submit" class="btn">Update User</button>
+                    <button type="submit" class="link-btn">Update User</button>
                 </div>
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
