--- a/views/includes/library.ejs
+++ b/views/includes/library.ejs
@@ -58,10 +58,8 @@
          <% } %> 
          <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
          <input type="hidden" name="gradientId" value='<%=gradients[i]._id%>'>
-
-         
-         <div>creator:<%=gradients[i].userId%></div>
-    
+         <div><%=gradients[i].userId.name%></div>
+        
         </form>
 
   </div>
