--- a/public/css/main.css
+++ b/public/css/main.css
@@ -469,6 +469,36 @@ ul{
     
 }
 
+.user-info{
+    display: flex;
+    width: auto;
+    height: 50px;
+    border-radius: 20px;
+    background-color: rgb(211, 211, 211);
+    padding: 10px;
+    margin: 10px;
+}
+
+.users-container{
+    display: block;
+}
+.user-name{
+    display: flex;
+    align-items: center;
+    width: 150px;
+   
+}
+
+ .users{
+    background: none;
+    border: solid 1px #853fe0;
+    color:#853fe0;
+}
+ .users:hover{
+    background-color: #853fe0;
+    color: white;
+    cursor: pointer;
+}
 
 
 
