--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -25,14 +25,29 @@
                     <label for="tags">Tags</label>
                     <input id="tags" class="form-input-text" type="text" name="tags" placeholder="seperate by spaces...">
                 </div>
+                
+                 <!-- <div class="form-group">
+                    <label for="color-number"># of colors</label>
+                  <select id="color-number" class="color-number" name="color-number">
+                    <option value="2" selected>2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                  </select>
+                 </div> -->
 
                 <div class="form-group">
                 <p>Colors</p>
-                    <input id="color" class="form-input-color" type="color" name="color1" placeholder="color..."
-                        required>
-                    <input id="color" class="form-input-color" type="color" name="color2" placeholder="color..."
-                        required>
+                    <input id="color" class="form-input-color" type="color" name="color1" required>
+                    <input id="color" class="form-input-color" type="color" name="color2" required>
+                    <input id="color" class="form-input-color" type="color" name="color3">
+                    <input id="color" class="form-input-color" type="color" name="color4">
+                    <input id="color" class="form-input-color" type="color" name="color5">
+                    <input id="color" class="form-input-color" type="color" name="color6">
                 </div>
+
                 <div class = "form-group">
                     <label for= "types">Gradient type</label>
                     <select  id ="types" class="types" name="type">
