--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -103,36 +103,49 @@
   const context = canvas.getContext("2d");
 
 
-  function createGradient(gradient, context, color1, color2) {
-    gradient.addColorStop(0,  color1);
-    gradient.addColorStop(1, color2);
-    context.fillStyle = gradient;
-    context.fillRect(0, 0, 500, 500);
+  // function createGradient(gradient, context, color1, color2) {
+  //   gradient.addColorStop(0,  color1);
+  //   gradient.addColorStop(1, color2);
+  //   context.fillStyle = gradient;
+  //   context.fillRect(0, 0, 500, 500);
 
+  // }
+
+  function createGradient(gradient, context, colors){
+    colors = colors.split(',')
+    gradient.addColorStop(0, colors[0])
+    for(let i=1; i<colors.length-1; i++){
+      const color = colors[i];
+      console.log(color)
+       const stopOffset = i/colors.length;
+       gradient.addColorStop(stopOffset, color);
+    }
+    gradient.addColorStop(1, colors[colors.length-1])
+      context.fillStyle = gradient;
+      context.fillRect(0, 0, 500, 500);
   }
 
   let gradient;
   switch ('<%=type%>') {
     case 'horizontal':
       gradient = context.createLinearGradient(0, 0, 500, 0);
-      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
-
+      createGradient(gradient, context, '<%=gradient.colors%>')
       break;
 
 
     case 'vertical':
       gradient = context.createLinearGradient(0, 0, 0, 500)
-      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+      createGradient(gradient, context, '<%=gradient.colors%>')
       break;
 
     case 'radial':
       gradient = context.createRadialGradient(300, 300, 30, 300, 300, 300)
-      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+      createGradient(gradient, context, '<%=gradient.colors%>')
       break;
 
     case 'diagonal':
       gradient = context.createLinearGradient(0, 0, 500, 500)
-      createGradient(gradient, context, '<%=color1%>', '<%=color2%>')
+      createGradient(gradient, context, '<%=gradient.colors%>')
       break;
 
   }
