--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -40,12 +40,12 @@
 
                 <div class="form-group">
                 <p>Colors</p>
-                    <input id="color" class="form-input-color" type="color" name="color1" required>
-                    <input id="color" class="form-input-color" type="color" name="color2" required>
-                    <input id="color" class="form-input-color" type="color" name="color3">
-                    <input id="color" class="form-input-color" type="color" name="color4">
-                    <input id="color" class="form-input-color" type="color" name="color5">
-                    <input id="color" class="form-input-color" type="color" name="color6">
+                    <input id="color" class="form-input-color" type="color" name="color1" value="#fcfcfc" required>
+                    <input id="color" class="form-input-color" type="color" name="color2" value="#fcfcfc" required>
+                    <input id="color" class="form-input-color" type="color" name="color3" value="#fcfcfc">
+                    <input id="color" class="form-input-color" type="color" name="color4" value="#fcfcfc">
+                    <input id="color" class="form-input-color" type="color" name="color5" value="#fcfcfc">
+                    <input id="color" class="form-input-color" type="color" name="color6" value="#fcfcfc">
                 </div>
 
                 <div class = "form-group">
