--- a/views/includes/profile.ejs
+++ b/views/includes/profile.ejs
@@ -3,17 +3,14 @@
       <h1> <%=user.name%></h1>
       <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
     
-      <script>
-        function chanageNav(buttonId){
-        const button = document.getElementById(buttonId)
-        button.style.backgroundColor = "#4a018a";
-        }
-      </script>
+    
       <div class="profile-nav-container">
       
       <button class="profile-a" onclick ="location.assign('/gradient/favorites/<%=user._id%>')">Favorites <i class="fas fa-heart"></i></button>
       <button class="profile-a" onclick="location.assign('/users/posts/<%=user._id%>')">Posts <i class="fad fa-sticky-note"></i></button>
-       
+      <button class="profile-a" onclick="location.assign('/users/followers/<%=user._id%>')">Followers <i class="fad fa-users"></i></button>
+      <button class="profile-a" onclick="location.assign('/users/following/<%=user._id%>')">Following <i class="fad fa-users"></i></button>
+
         </div>
       
       <div class="form-group">
