--- a/views/users.ejs
+++ b/views/users.ejs
@@ -9,7 +9,7 @@
     <%- include('includes/navigation2.ejs')%>
 
     <div class="main">
-      <h1>Find people</h1>
+      <h1><%=title%></h1>
       <div class="users-container">
       <% for(let i=0 ;i<users.length; i++){%> 
         <div class="user-info">
