--- a/views/includes/navigation2.ejs
+++ b/views/includes/navigation2.ejs
@@ -4,12 +4,12 @@
     <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
-           
+
                     <% if (locals.isLoggedIn == true) { %>
-                   
                     <li class="main-header__item"><a  class = "<%= path === '/gradient/create' ? 'active' : ''%>"href="/gradient/create"><i class="fad fa-pencil-paintbrush"></i> New</a></li>
-                    <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library"><i class="fad fa-books"></i> Library</a></li>
                     <li class="main-header__item"><a class = "<%= path === '/users/myProfile' ? 'active' : ''%>" href="/users/myProfile/<%=locals.user._id%>"><i class="fad fa-user"></i> Profile</a></li>
+                    <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library"><i class="fad fa-books"></i> Explore</a></li>
+
                     <li class="main-header__item"><a class = "<%= path === '/users/find' ? 'active' : ''%>" href="/users/find"><i class="fad fa-search"></i> Find people</a></li>
                     
                  <% if (locals.isAdmin == true) { %>
@@ -21,6 +21,7 @@
 
                 <% } else { %> 
                      <li class="main-header__item"><a class = "<%= path === '/' ? 'active' : ''%>" href="/"><i class="fad fa-home-lg-alt"></i> GG</li>
+                        <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library"><i class="fad fa-books"></i> Explore</a></li>
                     <li class="main-header__item"><a  class = "<%= path === '/users/login' ? 'active' : ''%>"href="/users/login"><i class="fad fa-user"></i> Login</a></li>
                     <li class="main-header__item"><a class = "<%= path === '/users/sign-up' ? 'active' : ''%>" href="/users/sign-up"><i class="fad fa-user-plus"></i> Sign-up</a></li>
                     <% } %> 
