--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,4 +9,12 @@
     <link rel = "stylsheet" href = "/css/forms.css">
     <link rel = "icon" href = "/favicon.ico">
     <script src="https://kit.fontawesome.com/9eb54e81b4.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY05JHE9MH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-FY05JHE9MH');
+    </script>
 </head>
